<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Events</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_event">Add event</string>
    <string name="action_add_person">Add person</string>
    
    <!-- Activity titles -->
    <string name="title_activity_events">Events</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_add_event">Add an event</string>
    <string name="title_activity_add_person">Add a person</string>
    <string name="title_activity_edit_person">Edit person details</string>
    <string name="title_activity_edit_event">Edit Event details</string>
    <string name="title_activity_show_event">Event details</string>
    <string name="title_activity_show_person">Person details</string>
    <string name="title_activity_show_message">Message details</string>
    <string name="title_activity_add_confirmation">Add a confirmation</string>
    <string name="title_activity_edit_confirmation">Edit confirmations</string>
    <string name="title_activity_add_message">Add a message</string>
    <string name="title_activity_edit_message">Edit message details</string>

    <!-- Main menu -->
    <string name="menu_title">Events Application</string>
    <string name="menu_events">Events</string>
    <string name="menu_people">People</string>
    
    <!-- Main actions -->
    <string name="action_back">Back</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_set_date">Set date</string>
    <string name="action_set_time">Set time</string>

    <!-- Person -->
    <string name="person_name">Name:</string>
    <string name="person_email">E-mail address:</string>
    <string name="person_birth_date">Date of birth:</string>
    <string name="person_created">Created at:</string>
    <string name="person_updated">Updated at:</string>
    <string name="person_confirmations">Confirmations:</string>
    <string name="person_events">Going to:</string>
    <string name="person_add_title">Add person</string>
    <string name="person_edit_title">Edit person</string>

    <!-- Event -->
    <string name="event_title">Title:</string>
    <string name="event_description">Description:</string>
    <string name="event_start_date">Start time:</string>
    <string name="event_end_date">End time:</string>
    <string name="event_created">Created at:</string>
    <string name="event_updated">Updated at:</string>
    <string name="event_confirmations">Confirmations:</string>
    <string name="event_add_title">Add event</string>
    <string name="event_edit_title">Edit event</string>
    <string name="event_show_messages">Show messages</string>
    <string name="event_add_confirmation">Add confirmation</string>
    <string name="event_show_title">Event details</string>
    
    <!-- Confirmation -->
    <string name="action_add_confirmation">Add confirmation</string>
    <string name="action_edit_confirmation">Edit confirmation</string>
    <string name="action_delete_confirmation">Delete confirmation</string>
    <string name="conf_person_name">Person name</string>
    <string name="conf_status">Confirmation status</string>
    
	<!-- Message -->
    <string name="action_add_message">Add message</string>
    <string name="action_edit_message">Edit message</string>
    <string name="action_delete_message">Delete message</string>
    <string name="mesg_person_name">Person name</string>
    <string name="message">Message:</string>
    
    <!-- Progress -->
    <string name="progress_title">Please wait</string>
    <string name="progress_add_person">Adding person...</string>
    <string name="progress_add_event">Adding event...</string>
    <string name="progress_add_conf">Adding confirmation...</string>
    <string name="progress_add_msg">Adding message...</string>
    <string name="progress_edit_person">Editing person...</string>
    <string name="progress_edit_event">Editing event...</string>
    <string name="progress_edit_conf">Editing confirmation...</string>
    <string name="progress_edit_msg">Editing message...</string>
    <string name="progress_del_person">Deleting person...</string>
    <string name="progress_del_event">Deleting event...</string>
    <string name="progress_del_conf">Deleting confirmation...</string>
    <string name="progress_del_msg">Deleting message...</string>
    <string name="progress_loading">Loading...</string>

</resources>
