<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowEventActivity" >

    <LinearLayout
        android:id="@+id/btn_group_show_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	<Button
            	android:id="@+id/btn_show_messages"
        		android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
            	android:onClick="showMessages"
            	android:text="@string/event_show_messages" />
            <Button
            	android:id="@+id/btn_add_confirmation"
        		android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
            	android:onClick="addConfirmation"
            	android:text="@string/event_add_confirmation" />
        </LinearLayout>
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	<Button
            	android:id="@+id/btn_show_event_back"
        		android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
            	android:onClick="back"
            	android:text="@string/action_back" />
        	
        	<Button
 	        	android:id="@+id/btn_edit_event"
    	    	android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	        	android:layout_weight="1"
            	android:onClick="editEvent"
            	android:text="@string/action_edit" />
        	
        	<Button
        		android:id="@+id/btn_show_event_delete"
        		android:layout_width="fill_parent"
	        	android:layout_height="wrap_content"
	        	android:layout_weight="1"
    	    	android:text="@string/action_delete"
        		android:onClick="delete" />
        	</LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/show_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/event_show_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_group_show_event"
        android:layout_below="@id/show_event_title"
        android:orientation="vertical" >

        <TableLayout
            android:id="@+id/show_event_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:layout_marginRight="15dp"
                    android:text="@string/event_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/show_event_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginRight="15dp"
                    android:text="@string/event_start_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/show_event_start_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginRight="15dp"
                    android:text="@string/event_end_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/show_event_end_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_marginRight="15dp"
                    android:text="@string/event_confirmations"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>

        <ScrollView
            android:id="@+id/show_event_confirmations"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <ListView
                android:id="@android:id/list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>
    </LinearLayout>

</RelativeLayout>