<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ShowEventActivity" >
    
    <LinearLayout
    	android:id="@+id/btn_group_show_person"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_alignParentBottom="true" >
    	<Button
        	android:id="@+id/btn_show_person_back"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
    	    android:text="@string/action_back"
        	android:onClick="back" />
        <Button
        	android:id="@+id/btn_show_person_edit"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
    	    android:text="@string/action_edit"
        	android:onClick="edit" />
        <Button
        	android:id="@+id/btn_show_person_delete"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
    	    android:text="@string/action_delete"
        	android:onClick="delete" />
	</LinearLayout>
        
    <TextView
        android:id="@+id/show_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true" />

	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_below="@id/show_person_name"
    	android:layout_above="@id/btn_group_show_person" >
    	
    	<TableLayout
    		android:id="@+id/show_person_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TableRow>
                <TextView
                    android:text="@string/person_email"
                    android:layout_marginRight="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/show_person_email"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/person_birth_date"
                    android:layout_marginRight="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/show_person_birth_date"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/person_events"
                    android:layout_marginRight="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
        
        <ScrollView       
        	android:id="@+id/show_person_events"
        	android:layout_width="match_parent"
        	android:layout_height="fill_parent"
        	android:fillViewport="true" >
        	<ListView
        		android:id="@android:id/list"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:padding="5dp"
        		android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>
	</LinearLayout>
</RelativeLayout>