<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/title_add_event_mesg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/action_add_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<LinearLayout
        android:id="@+id/btn_group_add_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
		<Button
        	android:id="@+id/btn_add_msg_back"
        	android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
    	    android:text="@string/action_cancel"
        	android:onClick="back" />
    	<Button
        	android:id="@+id/btn_add_msg_save"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="1"
        	android:onClick="post"
        	android:text="@string/action_save" />
	</LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_group_add_msg"
        android:layout_below="@id/title_add_event_mesg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

			<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mesg_person_name" />
                
            <Spinner
                android:id="@+id/spinner_event_mesg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />
            
            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/message" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>