<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
        		android:id="@+id/menu_title"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="35dp"
        		android:layout_gravity="center_horizontal"
        		android:layout_alignParentTop="true"
        		android:text="@string/menu_title"
        		android:textSize="32sp" />

            <Button
                android:id="@+id/event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:onClick="goToEvents"
                android:text="@string/menu_events"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <Button
                android:id="@+id/people_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:onClick="goToPeople"
                android:text="@string/menu_people"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>